--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
-.App {
+/* Base settings */
+:root {
+  --green: #4eb7be;
+  --blue: #1182c1;
+  --dark-blue: #3342a8;
+  --grey: #4f4d43;
+  --light-grey: #d8e1e5;
+  --white: #fff;
+  --black: #000000;
+  font-size: 16px;
+  color: var(--grey);
+}
+
+body {
+  margin: 0;
+}
+.main-content {
+  font-family: 'Open Sans';
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-right {
+  text-align: right;
+}
+
+/* Loading layer */
+.loading-layer {
+  color: #fff;
+  font-size: 4em;
+  width: 100%;
+  text-align: center;
+}
+/* Overlay for elements */
+.overlay-visible {
+  position: relative;
+}
+
+.overlay-visible::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: var(--grey);
+  opacity: 0.2;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* Form items */
+input[type="checkbox"] {
+  position: relative;
+  display: inline-block;
+  vertical-align: bottom;
+  appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border: 1px solid var(--green);
+  background: #fff;
+}
+
+input[type="checkbox"]:checked::before {
+  content: '\f00c';
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: 'FontAwesome';
+  background: var(--green);
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 0.7rem;
+  line-height: 0.9rem;
+}
+
+input[type="checkbox"] + label {
+  color: var(--green);
+}
+
+/* Main content */
+.main-content {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: var(--blue);
+  background: linear-gradient(20deg, var(--dark-blue) 0%, var(--blue) 100%);
+  height: auto;
+  min-height: 100vh;
+  box-sizing: border-box;
+  padding: 3rem;
+}
+
+.main-content_wrapper {
+  width: 90vw;
+  height: auto;
+  max-width: 1190px;
+}
+
+.main-content__top-block {
+  direction: rtl;
+}
+
+.main-content__top-block h1 {
+  display: inline-block;
+  vertical-align: middle;
+  width: 315px;
+  max-width: 100%;
+  color: #fff;
+  text-transform: uppercase;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-content__contacts-list {
+  background: var(--light-grey);
+  border-radius: 0 0 10px 10px;
+  box-shadow: 0 5px 6px 2px var(--dark-blue);
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.contact-details {
+  display: inline-block;
+  vertical-align: top;
+  width: 315px;
+  max-width: 100%;
+}
+
+.contact-details__top-block {
+  width: 100%;
+  height: 54px;
+  background: var(--green);
+}
+
+@media screen and (max-width: 992px) {
+  .main-content {
+    padding: 20px;
+  }
+  .main-content_wrapper {
+    max-height: 100%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px) {
+  .main-content__top-block h1 {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+  .contact-details {
+    height: auto;
+    width: 100%;
   }
 }
